--- a/todo.org
+++ b/todo.org
@@ -1,13 +1,14 @@
 * db
-** implenent Create/Drop for Column
-*** create columns in Table.Create
-** implement Create/Drop for Key
-*** create primaryKey in Table.Create
 ** implement Create/Drop for ForeignKey
 ** implement Create/Drop for Index
 ** implement Definition.Exists
 ** metasql
 ** unid
 ** cl-redb
+* slog
+** tag based
+* error
+** metaerr
+** stack trace
 
 su -u postgres psql
